tests/snapshots/test_runner__tests__compiler__typecheck__array_homogeneity_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let x: [Integer] = [1, null]
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/array_homogeneity_1.kk:2:26
  │
2 │   let x: [Integer] = [1, null]
  │                          ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + Null      |
    +---------------+-------------+
